--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
+    <script src="promise-polyfill.js"></script>
+    <script src="fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
