--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
-    <script src="promise-polyfill.js"></script>
-    <script src="fetch-polyfill.js"></script>
+    <div id="modal-container"></div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
